fixing pop-up spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -745,7 +745,7 @@ ul.login-buttons > li.login-logo > a > img {
 }
 
 #tip-center #tip-result {
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 #tip-center #more-info-buttons {
