--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -732,7 +732,7 @@ ul.login-buttons > li.login-logo > a > img {
 }
 
 #tip-center #tip-result {
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 #tip-center #more-info-buttons {
